# arrayflux

./: LICENSE  README.md  pyproject.toml  requirements.txt
arrayflux/: __init__.py  api.py  core.py  rolling.py
tests/: test_rolling.py
