[project]
name = "arrayflux"
version = "0.1.1"
description = "NumPy ndarray subclass with rolling-window operations."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lorenzo Santarsieri" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3"
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
